# speechToText

./: .gitignore  README.md  index.html  package-lock.json  package.json
assets/: manifest.json
assets/translate/argos/: bundle-report.json
assets/whispercpp/macos/: whisper-cli
docs/: offline-assets.md
engine/: main.py  requirements.txt
packaging/pyinstaller_stubs/: stanza.py
scripts/: download-offline-assets.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: neon-engine-aarch64-apple-darwin  neon-engine-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: api.ts  errors.ts  i18n.ts  types.ts
